[package]
name = "vidian-rs"
version = "0.1.0"
authors = ["shmilyvidian <shmilyvidian@youyi.onaliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
yew = { version = "0.14.3", features = ["std_web"] }
